k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: deepseek
  namespace: default
spec:
  ports:
    - name: http-deepseek
      port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: deepseek
  type: ClusterIP
